--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
         <address>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
-
     <!--MAIN-->
     <main>
         <!--Baner "Effective Solutions"-->
@@ -31,32 +30,28 @@
             <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
-
         <!--List (Strategy, Punctuality, Diligence, Technologies)-->
         <section>
+            <h2>Advantages</h2>
             <ul>
                 <li>
-                    <h2>Strategy</h2>
+                    <h3>Strategy</h3>
                     <p>Our goal is to identify the businessproblem to walk away with the perfect and creative solution.</p>
                 </li>
-
                 <li>
-                    <h2>Punctuality</h2>
+                    <h3>Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-
                 <li>
-                    <h2>Diligence</h2>
+                    <h3>Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-
                 <li>
-                    <h2>Technologies</h2>
+                    <h3>Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
-
         <!--Our Team-->
         <section>
             <h2>Our Team</h2>
@@ -66,19 +61,16 @@
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
-
                 <li>
                     <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
-
                 <li>
                     <img src="./images/camila.jpg" alt="Camila Garcia" width="264" />
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
-
                 <li>
                     <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" />
                     <h3>Daniel Wilson</h3>
@@ -87,7 +79,6 @@
             </ul>
         </section>
     </main>
-
     <!--FOOTER-->
     <footer>
         <a href="./index.html">WebStudio</a>
